--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="content">
     <h1>Jacob Smith</h1>
     <hr>
-    <h2>Software Consultant</h2>
+    <h2>Software Systems Engineer</h2>
     <ul class="landing-page__links">
       <li><a href="resume.html">Resume</a></li>
       <li><a href="blog.html">Blog</a></li>
