--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <ul class="landing-page__links">
       <li><a href="resume.html">Resume</a></li>
       <li><a href="blog.html">Blog</a></li>
-      <li><a href="https://github.com/systemist">GitHub</a></li>
+      <li><a href="https://github.com/jacobthemyth">GitHub</a></li>
       <li><a href="https://www.linkedin.com/in/systemist">LinkedIn</a></li>
     </ul>
-    <p class="landing-page__cta">Email me at <a class="inverted" href="mailto:jacob@jacobsmith.io">jacob@jacobsmith.io.</a></p>
+    <p class="landing-page__cta">Email me at <a class="inverted" href="mailto:jacob@smithjs.org">jacob@smithjs.org.</a></p>
   </div>
 
   <script>
